// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders AccountMenuItems when the user is signed in 1`] = `
<aside
  className="root_open"
>
  <div
    className="contents_open"
  >
    <div
      onSignOut={[MockFunction]}
    >
      AccountMenuItems
    </div>
  </div>
</aside>
`;

exports[`it renders SignIn component when the view is SIGNIN 1`] = `
<aside
  className="root_open"
>
  <div
    className="contents_open"
  >
    <div
      classes={
        Object {
          "modal_active": "loading",
        }
      }
      setDefaultUsername={[MockFunction]}
      showCreateAccount={[MockFunction]}
      showForgotPassword={[MockFunction]}
    >
       
      SignInComponent
    </div>
  </div>
</aside>
`;

exports[`it renders create account component when the view is CREATE_ACCOUNT 1`] = `
<aside
  className="root_open"
>
  <div
    className="contents_open"
  >
    <div
      classes={
        Object {
          "root": "createAccount",
        }
      }
      initialValues={
        Object {
          "email": "gooseton",
        }
      }
      isCancelButtonHidden={false}
    >
       
      CreateAccountComponent
    </div>
  </div>
</aside>
`;

exports[`it renders empty aside element when accountMenuIsOpen is false 1`] = `
<aside
  className="root"
>
  <div
    className="contents"
  />
</aside>
`;

exports[`it renders forgot password component when the view is FORGOT_PASSWORD 1`] = `
<aside
  className="root_open"
>
  <div
    className="contents_open"
  >
    <div
      initialValues={
        Object {
          "email": "gooseton",
        }
      }
    >
       
      ForgotPasswordComponent
    </div>
  </div>
</aside>
`;
